slb_test_(新建登陆系统)

--- a/pwa_sales_app/templates/index.html
+++ b/pwa_sales_app/templates/index.html
@@ -171,19 +171,16 @@
         </a>
     </div>
 
-
-<!-- 今日单据隐藏起来 -->
-    <!-- <div class="d-flex justify-content-between align-items-center mb-2">
+    <div class="d-flex justify-content-between align-items-center mb-2">
         <h5 class="mb-0">今日单据</h5>
         <a href="{{ url_for('main.report', date=business_date) }}"
            class="small text-decoration-none"
            data-transition="tab">
             查看今日日报 &raquo;
         </a>
-    </div> -->
+    </div>
 
-    
-    <!-- <ul class="list-group mb-5">
+    <ul class="list-group mb-5">
         {% for slip in slips %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
             <div>
@@ -216,7 +213,7 @@
             还没有记录，请点击「新建单据」开始记录。
         </li>
         {% endfor %}
-    </ul> -->
+    </ul>
 
 </div>
 
